@@ -163,7 +163,7 @@ mapstruct* swap_map(mapstruct *map) {
 	LOG(llevDebug,"Wanted to swap out map with player.\n");
 	return map;
     }
-    remove_all_pets(map); /* Give them a chance to follow */
+    remove_all_pets(); /* Give them a chance to follow */
 
     /* Update the reset time.  Only do this is STAND_STILL is not set */
     if (!map->fixed_resettime)
